ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ArgumentLists/parserErrorRecovery_ArgumentList7/input.ts.stderr
error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ArgumentLists/parserErrorRecovery_ArgumentList7/input.ts:1:7
  |
1 | Foo(a,,
  |       ^

error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ArgumentLists/parserErrorRecovery_ArgumentList7/input.ts:1:6
  |
1 | Foo(a,,
  |      ^

error: Unexpected eof
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ArgumentLists/parserErrorRecovery_ArgumentList7/input.ts:1:8
  |
1 | Foo(a,,
  |        ^

